# zaozi

./: .gitignore  .scalafix.conf  .scalafmt.conf  CLAUDE.md  LICENSE.txt  PROGRESS.md  README.md  build.mill  build.sc  flake.nix
circtlib/: package.mill
circtpanamabinding/: includeFunctions.txt
decoder/: package.mill
doc/: development.md  generator.md  rational.md
firtoollib/: package.mill
mlirlib/: package.mill
nix/: local-overlay.nix  overlay.nix
omlib/: package.mill
prcm/: package.mill  smt_solver_power_reset_clock_pmu.py
rvcover/: package.mill
rvdecoderdb/: package.mill
rvprobe/: package.mill
rvprobe/agent/: BENCHMARK_PLAN.md  CLAUDE.md  README.md  agent.py  config.py  extract_docs.py  indexer.py  pyproject.toml  rag.py  test_rag.py
rvprobe/agent/benchmark/: LLM_CONFIG.md  README.md  benchmark.py  config.yaml  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase4.py  verify_phase5.py
rvprobe/agent/benchmark/evaluators/: assembly_parser.py  constraint_checker.py  metrics.py
rvprobe/agent/benchmark/runners/: agent_runner.py  base_runner.py  direct_llm_runner.py
rvprobe/agent/benchmark/test_suite/: schemas.py  test_cases.py
rvprobe/agent/benchmark/utils/: timing.py
rvprobe/agent/benchmark/visualization/: report_generator.py  visualizer.py
rvprobe/agent/benchmark_results/: REPORT.md
rvprobe/agent/rag/: __init__.py  config.py  constraint_patterns.py  extract_docs.py  indexer.py  retriever.py
smtlib/: package.mill
stdlib/: package.mill
testlib/: package.mill
zaozi-compiler-plugin/: package.mill
(+758 files in other folders)
