[project]
name = "rvprobe-agent"
version = "0.1.0"
description = "RVProbe Agent - Automated Verification Generator"
authors = [
    {name = "Jianhao Ye", email = "Clo91eaf@qq.com"}
]
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["agent.py", "examples.py"]

[tool.uv]
dev-dependencies = []
